# easyRAG

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  README.md  app.config.ts  docker-compose.yml  package-lock.json  package.json  sync-rules.yaml  tsconfig.json  vite.config.ts
app/: client.tsx  routeTree.gen.ts  router.tsx  styles.css
app/components/: CitationMap.tsx  ConfidenceBadge.tsx  DocumentList.tsx  ECGBackground.tsx  GuidelineCard.tsx  QueryPanel.tsx  StatusBadge.tsx  TrickCard.tsx  UploadGuideline.tsx  UploadZone.tsx
app/context/: AuthContext.tsx
app/hooks/: useVote.ts
app/routes/: __root.tsx  index.tsx
app/routes/api/: citation-graph.ts  documents.ts  guidelines.$id.ts  guidelines.ts  query.ts  queue.ts  trends.ts  tricks.ts  upload.ts  vote.ts
app/routes/auth/: callback.tsx  login.tsx
app/routes/guidelines/: $id.tsx  index.tsx
app/routes/trends/: index.tsx
app/routes/tricks/: index.tsx
apps/api/: config.py  main.py  pyproject.toml
apps/api/routers/: documents.py  powersync.py  query.py  specialists.py
apps/api/services/: powersync.py  rag_service.py
apps/web/: biome.json  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  router.tsx
apps/web/src/components/: ChatInterface.tsx  DocumentList.tsx  DocumentUpload.tsx  (+1 more)
lib/: api-file-route.ts  auth.ts  citationGraph.ts  db.ts  embed.ts  leann.ts  literature.ts  medllm.ts  milvus.ts  obsidian.ts  ocr.ts  powersync.ts  queue.ts  rag.ts  scoring.ts  turso.ts
scripts/: sync-obsidian.ts
supabase/functions/verify-sources/: index.ts
(+7 files in other folders)
